@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.429 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.430 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -221,3 +221,4 @@ Changes from NetBSD 2.0 to NetBSD 3.0:
 		[hubertf 20050216]
 	racoon(8): Switch to ipsec-tools' racoon [manu 20050216]
 	ipf(8): updated to version 4.1.6. [martti 20050219]
+	libradius(3): import libradius from FreeBSD [manu 20050220]
